--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/combobox": "^0.11.2",
+    "@react-google-maps/api": "^1.13.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dotenv": "^8.2.0",
+    "mongodb": "^3.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.12.0",
     "react-scripts": "4.0.0",
+    "swr": "^0.4.2",
+    "use-places-autocomplete": "^1.6.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
