--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
+    "firebase": "^8.2.9",
     "mongodb": "^3.6.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-query": "^3.12.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "swr": "^0.4.2",
     "use-places-autocomplete": "^1.6.0",
