--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/firestore": "^2.2.0",
     "@reach/combobox": "^0.11.2",
     "@react-google-maps/api": "^1.13.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "firebase": "^8.2.9",
+    "geofirestore": "^4.4.1",
     "mongodb": "^3.6.4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
@@ -19,6 +21,7 @@
     "react-query": "^3.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "rxjs": "^6.6.6",
     "swr": "^0.4.2",
     "use-places-autocomplete": "^1.6.0",
     "web-vitals": "^0.2.4"
