--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
+    "react-firebaseui": "^4.1.0",
     "react-icons": "^4.2.0",
     "react-query": "^3.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "swiper": "^6.5.0",
     "swr": "^0.4.2",
     "use-places-autocomplete": "^1.6.0",
     "web-vitals": "^0.2.4"
