--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
     "react-query": "^3.12.0",
     "react-router-dom": "^5.2.0",
