--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@firebase/firestore": "^2.2.0",
+    "@material-ui/core": "^4.11.3",
     "@reach/combobox": "^0.11.2",
     "@react-google-maps/api": "^1.13.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^7.0.5",
     "react-icons": "^4.2.0",
     "react-query": "^3.12.0",
     "react-router-dom": "^5.2.0",
