--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.6.4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-datalist-input": "^2.1.1",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-google-recaptcha": "^2.1.0",
