--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "react-hook-form": "^7.0.5",
     "react-icons": "^4.2.0",
     "react-query": "^3.12.0",
+    "react-rangeslider": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "swiper": "^6.5.0",
+    "swiper": "^6.7.0",
     "swr": "^0.4.2",
     "use-places-autocomplete": "^1.6.0",
     "web-vitals": "^0.2.4"
